Now asks for user location and button added

--- a/WorldTrotter/Info.plist
+++ b/WorldTrotter/Info.plist
@@ -41,5 +41,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>&quot;Give me your location&quot;</string>
 </dict>
 </plist>
